--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^6.18.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
